# hol

./: .gitignore  LICENSE  README.md  hol-lolcat.cabal  hol.hs
app/: Colors.hs  Main.hs
