cabal-version:      2.4
name:               hol-lolcat
version:            0.1.0.0

synopsis: like gol, but in haskell and suckmore

license:            MIT
license-file:       LICENSE
author:             capezotte
maintainer:         carana2099@gmail.com

extra-source-files: CHANGELOG.md

executable hol-lolcat
    main-is:          Main.hs
    other-modules:    Colors
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
